epub: Parse CSS combinators left-associatively.

Fixes bug 695994 where multiple child selectors would not match properly.

The "a > b > c" rule should be interpreted as ((a > b) > c) in order
to match properly.